# miyoko-pfx-bot

./: .env.example  .gitignore  README.md  bot  pyproject.toml
src/: bot.py  command_handler.py  commands.py  config.py  config_example.yaml  database.db  database.py  handlers.py  logger.py  main.py  models.py  parser.py  process_command.py  yt-channels.yaml
src/configs/: config.example.yaml  vk-domains.yaml  yt-channels.yaml
src/database/: database.py  models.py
src/func/: bpmtoms.py
src/func/basic/: info.py
src/func/parsers/: vk.py  youtube.py
src/func/tools/: bpmtoms.py  ltsms.py
src/parsers/: vk.py  youtube.py
src/routers/cmds/: direct.py  info.py
src/routers/parsers/: livefans.py  sigure.py  vk.py  youtube.py
src/routers/tools/: bpmtoms.py  calc.py  calcs.py  ltsms.py
src/temp/: last_videos.yaml
