# Poetry
[tool.poetry]
name = "miyoko"
version = "0.1.0"
description = "📨 Telegram-bot for Priscilla FX Community"
authors = ["masajinobe-ef <priscilla.effects@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "*", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
google-api-python-client = "^2.136.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pytz = "^2024.1"
sqlalchemy = "^2.0.31"
aiohttp = ">=3.9.0,<3.10.0"
aiosqlite = "^0.20.0"

# Dev-Deps
[tool.poetry.group.dev.dependencies]
commitizen = "^3.27.0"


# Ruff
[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
ignore = ["F403"]


# Commitizen
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
version = "0.1.0"
update_changelog_on_bump = true
major_version_zero = true


# Poetry build system
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
