[project]
name = "miyoko-pfx-bot"
version = "0.1.0"
description = "📨 Telegram bot for the Priscilla Fx Community"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.13.1",
    "aiohttp>=3.10.10",
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.12.3",
    "google-api-python-client>=2.149.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
]
